[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/DialogueBox/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://src/DialogueBox/DialoguePlayer.tscn" type="PackedScene" id=2]

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -155.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="HBoxContainer" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1005.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/Columns"]
margin_right = 38.0
margin_bottom = 115.0
size_flags_vertical = 5
text = "Name"

[node name="Text" type="Label" parent="Panel/Columns"]
margin_left = 42.0
margin_right = 857.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Dialogue Text"
align = 1
valign = 1

[node name="ButtonNext" type="Button" parent="Panel/Columns"]
margin_left = 861.0
margin_right = 921.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
size_flags_vertical = 0
text = "Next"

[node name="ButtonFinished" type="Button" parent="Panel/Columns"]
margin_left = 925.0
margin_right = 985.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
size_flags_vertical = 0
text = "Done"

[node name="DialoguePlayer" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="Panel/Columns/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/Columns/ButtonFinished" to="." method="_on_ButtonFinished_pressed"]
[connection signal="end_conversation" from="DialoguePlayer" to="." method="_on_DialoguePlayer_end_conversation"]
